Updated with generic bag